objects/Feedback__c/Feedback__c.object-meta.xml
<CustomObject>
    <description>Track feedback from the community and other sources</description>
    <label>Feedback</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Feedback Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>