objects/Feedback__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Grouping of the type of feedback provided</description>
    <inlineHelpText>Select a category that best describes the feedback or suggestion offered</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solution Feature Request</fullName>
            </value>
            <value>
                <fullName>Community Portal Feedback</fullName>
            </value>
            <value>
                <fullName>Support Team Feedback</fullName>
            </value>
            <value>
                <fullName>Solution Feedback</fullName>
            </value>
            <value>
                <fullName>General Feedback</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Access</fullName>
                <isActive>false</isActive>
                <label>Access</label>
            </value>
            <value>
                <fullName>Functionality</fullName>
                <isActive>false</isActive>
                <label>Functionality</label>
            </value>
            <value>
                <fullName>Navigation</fullName>
                <isActive>false</isActive>
                <label>Navigation</label>
            </value>
            <value>
                <fullName>Topics</fullName>
                <isActive>false</isActive>
                <label>Topics</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>