objects/Feedback__c/fields/Contact_me_about_this_feedback__c.field-meta.xml
<CustomField>
    <fullName>Contact_me_about_this_feedback__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Opt in for a submitter to provide consent to be contacted about the feedback provided.</description>
    <label>Contact me about this feedback</label>
    <type>Checkbox</type>
</CustomField>