objects/Feedback__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Details or description about the feedback or suggestion offered</description>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>