objects/Feedback__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Source of the feedback provided.</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer_Community</fullName>
                <label>Customer Community</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>