objects/Feedback__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>Headline summary of the feedback offered</description>
    <label>Summary</label>
    <length>100</length>
    <type>Text</type>
</CustomField>