objects/Feedback__c/listViews/My_Feedback.listView-meta.xml
<ListView>
    <fullName>My_Feedback</fullName>
    <columns>NAME</columns>
    <columns>Summary__c</columns>
    <columns>Category__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Feedback</label>
</ListView>